--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <img id="userImage" src="" alt="User Image">
+        <h2 id="userName"></h2>
+
+		<p id="additionalInfo"></p>
+        <div class="buttons">
+            <button data-attr="age">Age</button>
+            <button data-attr="email">Email</button>
+            <button data-attr="phone">Phone</button>
+        </div>
+
+        
+
+        <button id="getUser">GET ANOTHER USER</button>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
